-------------------------------------
	4-1
-------------------------------------
Changed behavior of file browser to always use config setting
for browserLocal regardless of browser's host. This should be
OK now that IVFSExplorer bugs are fixed in VirtualBox 4.0.

Fixed bug in Create HardDisk wizard functionality that would
only allow a disk of size 1MB to be created.

-------------------------------------
	4-0 - 2011-01-07
-------------------------------------
UI and back-end changes to match new version of VirtualBox.

Updated jquery-ui to 1.8.2.

Updated jquery to 1.4.4

Fixed bug that would not allow console connections if accessing
phpVirtualBox through a URL where a port is specified. E.g.
http://myhost:8080/phpVirtualBox

Added json_encode() for PHP compiled with --disable-json and
PHP versions < 5.2.0.

Fixed compatibility issues with PHP 5.1.x.

"rdpHost" setting changed to "consoleHost"

Added VirtualBox version to host in VM list and on the host
details tab.

Added multiple server functionality.

Fixed case sensitivity for $browserRestrictFiles setting.

Fixed bug when using OSE where the Shared Folders section would
not be selected when "Shared Folders" is clicked on from the
Details tab / section.

Exporting a VM defaults to '.ova' file.

Added language contexts.

Changed cache temp dir location to try environment variables
first.

Fixed bug that would not send the 'Esc' key to the console when
pressed.

Changed back to GPL license.

Added multiple server support.

You can now power off a VM that is in a "Stuck" state.

Versioning scheme is now
	(VirtualBox compatible version)-(phpVirtualBox version)

Fixed bug that would not display error message on failure to
connect to vboxwebsrv.

Removed old imgpng requirement as VirtualBox can now export
screen shots as PNG data.

Fixed media mounting bug that would not allow anything other than
host drives to be mounted.

-------------------------------------
		0.5 - 2010-08-10