@@ -1,6 +1,6 @@
 <!-- $Id$ -->
 <div style='text-align: center'>
-<h3 align='center'>phpVirtualBox 4-0 -/- VirtualBox 4.x compatible</h3>
+<h3 align='center'>phpVirtualBox 4-1 -/- VirtualBox 4.x compatible</h3>
 <p style='text-align: center'>Copyright (C) 2011 Ian Moore (imoore76 at yahoo dot com)</p>
 <p style='text-align: center'><a target='_blank' href='http://code.google.com/p/phpvirtualbox/'>http://code.google.com/p/phpvirtualbox/</a></p>
 <p id='vboxAboutVbox'>VirtualBox</p>
